--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>HPL-Sweep</h1>
+            <h1>HPBench</h1>
             <p>HPL Parameter Sweep Application</p>
         </header>
 
@@ -53,7 +53,7 @@
 
                 <div class="button-group">
                     <button onclick="testSlurmConfig()" class="btn-secondary">Test Configuration</button>
-                    <button onclick="submitJob()">Submit Parameter Sweep</button>
+                    <button onclick="submitJob()">Setup Parameter Sweep</button>
                 </div>
 
                 <div id="test-status" class="status-message" style="display: none;"></div>
